iceprod/server/data/www/base.css
/*
# text colors
links: #2229ff
green accent: #3bcc07
orange accent: #ff5f11

# monochrome
light: #fffffc
med-light: #e5e5e2;
med: #bfbfbd;
med-dark: #7f7f7e;
dark: #40403f;

# highlights
light blue: #2efff7
mid blue: #1f8aw8
mid green: #1fe874
bright green: #3cff1c

# background colors
light blue: #dcfaff
dark blue: #bdcce8
violet: #d7d0ff
dark green: #bde8d8
mid green: #caffce
off-white green: #f6fffd
*/

/* CSS Reset
   http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}
/* end of CSS Reset */

/* some basic styles */
h1, h2, h3, h4 {
    padding: 0.2em;
}
h1 {
    font-size: 1.5em;
}
h2 {
    font-size: 1.3em;
}
h3 {
    font-size: 1.2em;
    font-family: Arial, sans-serif;
}
h4 {
    font-size: 1.1em;
}
a {
    color: #2229ff;
    text-decoration: none;
}
a:hover {
    text-decoration: underline;
}

/* page layout */
header {
    width: 100%;
    height: 3.5em;
    z-index: 100;
}
header .title {
    font: 2em/2em sans-serif;
    color: #189cc4;
    padding: 0 .6em;
}
div.body {
    width: 100%;
    padding: 0.5em;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
div.sidebar {
    width: 10em;
}
div.sidebar, div.contents {
    display: inline-block;
    vertical-align: top;
}
div.sidebar .section {
    margin: .2em 0 .8em;
}
div.sidebar .indent {
    margin-left: .5em;
}
div.sidebar button {
    margin: .5em 0 .2em;
}
footer {
    padding: .2em .4em;
    text-align:right;
    color: #cccccc;
}
#page_title {
    margin-bottom: .3em;
}

/* menu */
#menu-icon {
    display: none;
    width: 1em;
    height: 1em;
    background-color: #17d354;
    font: bold 2em/1em serif icon;
    text-align: center;
    text-decoration: none;
    vertical-align: middle;
    color: #fff;
}
#menu-icon span {
    display: block;
    width: 0.7em;
    height: 0.1em;
    background-color: #444;
    margin: 0.15em auto;
    border-radius: 0.2em;
}
#menu-icon span:first-child {
    margin-top: .2em;
}
#menu-icon:hover span, #menu-icon:active {
    background-color: #17d354;
}
a:hover#menu-icon {
    background-color: #444;
}
nav.menu  {
    float: right;
    margin: 1em;
}
nav.menu ul {
    list-style: none;
}
nav.menu li {
    display: inline-block;
}
nav.menu li a {
    display: inline-block;
    font: 1.2em/1.2em Arial,serif menu;
    padding: .2em .6em;
    text-decoration: none;
    background-color: #fffffc;
    color: #16a854;
}
nav.menu li a:hover, nav.menu li a:active,
nav.menu li.current a,
nav.menu li.master a:hover, nav.menu li.master a:active {
    color: #fffffc;
}
nav.menu li.current a, nav.menu li.current a:hover {
    background-color: #16a854;
}
nav.menu li a:hover {
    background-color: #46ce83;
}
nav.menu li a:active {
    background-color: #1fe874;
}
nav.menu li.master {
    margin-left: 3em;
}
nav.menu li.master a {
    color: #3bcc07;
}
nav.menu li.master a:hover, nav.menu li.master a:active {
    background-color: #3bcc07;
}
@media only screen and (max-width : 640px) {
    #menu-icon {
        display: inline-block;
    }
    nav.menu ul, nav.menu:active ul {
        display: none;
        position: absolute;
        background: #fff;
        border: .2em solid #444;
        right: 1em;
        top: 3em;
    }
    nav.menu:hover ul {
        display: block;
    }
    nav.menu li {
        display: block;
    }
    nav.menu li a {
        width: 100%;
        padding: .3em .9em;
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
    }
    nav.menu li.master {
        margin-left: 0;
    }
}

/* misc */
.esc-separator {
    background-color: #d6d6d6;
    border-style: none;
    font-size: 0;
    height: 1px;
    margin: -1px 0;
    position: relative;
}
.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

.dataset .settings {
    margin-left: .3em;
    margin-bottom: .5em;
    font-size: 1.05em;
}
.filters select {
    width: 9.5em;
}

table.key_value td {
    margin-top: .2em;
    border: 0;
}
table.key_value td.key:after {
    content: ":";
}
table.key_value td.value {
}

div.task_details {
    background: lightgreen;
    margin-bottom: 40px;
}
div.task_details div.key_value {
    padding: 2px 4px;
}
div.task_details div.key_value div {
    display: inline-block;
}
div.task_details div.key_value div:nth-of-type(1) {
    width: 150px;
}
div.logs p.log_name {
    font-weight: bold;
}
div.logs div.log_body {
    background: pink;
    padding: 10px;
    margin: 5px 5px 5px 20px;
}

